# KitKat

./: Cargo.toml  config.toml  translate.md  translate_voice.md
src/: main.rs
src/audio/: mod.rs  voicevox.rs
src/commands/: mod.rs  translate.rs  translate_voice.rs
src/commands/music/: mod.rs  pause.rs  play.rs  queue.rs  resume.rs  skip.rs  stop.rs
src/utils/: antispam.rs  buttons.rs  deleted_messages.rs  interactions.rs  mod.rs
src/utils/antispam/: cleanup.rs  config.rs  detector.rs  mod.rs  model.rs
