[package]
name = "kitkat"
version = "0.4.0"
edition = "2024"

[dependencies]
poise = "0.6.1"
serenity = "0.12.0"
dotenvy = "0.15.7"
openai-api-rs = "4.1.0"
regex = "1.12.3"
tokio = { version = "1.28.1", features = ["full"] }
anyhow = "1.0.102"
symphonia = { version = "0.5.4", features = ["aac", "mp3", "isomp4", "alac"] }
songbird = { version = "0.6.0", features = ["builtin-queue"] }
lavalink-rs = "0.15.0"
reqwest = "0.11.22"
serde = "1.0.164"
serde_json = "1.0.128"
strum = { version = "0.28.0", features = ["derive"] }
strum_macros = "0.28.0"
once_cell = "1.21.4"
rusqlite = { version = "0.32.1", features = ["bundled"] }